--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,13 @@ hs_err_pid*
 /.classpath
 /.project
 /CONSTRAINTS
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
+einsteins-riddle-csp.iml
